               example, fmt_ulong.c was renamed to fmt_long.c and now
               both fmt_ulong and fmt_long are defined in this file.
20070527 code: added signed scan_* equivalents, as with fmt.
20070527 code: rewrote all fmt tests.
20070527 version: corelib 0.55
20070528 code: signed variants of fmt_pad, using common macro core in
               fmt_pad.h
20070601 code: added scan_charsetn() and scan_notcharsetn().
20070606 code: added rmkdir().
20070607 code: added dgetline_setfd().
20070608 version: corelib 0.56
20070608 code: now using corelib-conf.c from common source.
20070612 code: compilation tools now produce dual architecture binaries on
               OS X by default.
20070613 code: reverted previous change - new cpj tools provide explicit
               cross compilation.
20070615 code: updated to new cpj tool and new sysdeps.
20070617 code: strange bug related to large signed constants on IA64.
               -0xffffffff == 1, -0xffffffffL == -0xffffffff. this does
               not affect any library code, it simply required an
               adjustment to the unit tests.
20070617 code: fmt_char*() becomes signed char.
20070619 code: removed uint entirely. in practice, it is too difficult
               to use correctly.
20070625 code: reimplementation of array, including array_catn with a
               common core.
20070626 code: added dqueue.
20070708 code: added dir_walk.
20070711 code: fixed bug in array_index. calling array_index(&a, 0) on
               a zero length array will return a pointer to the first,
               nonexistant element. this is not dangerous in the sense
               that it does not access unallocated memory, but it is
               obviously incorrect.
20070727 version: corelib 0.57
20070727 code: correct dir_walk test.
20070803 code: added dir_name_r and base_name_r. dir_name and base_name are
               now compatibility wrappers around these functions.