@@ -14,5 +14,6 @@ void *alloc(unsigned long);
 void *alloc_zero(unsigned long);
 int   alloc_re(void **, unsigned long, unsigned long);
 void  dealloc(void *);
+void  dealloc_null(void **);
 
 #endif
